--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^1.7.7",
     "csvtojson": "^2.0.10",
     "react-csv": "^2.2.2",
+    "react-router-dom": "^6.27.0",
     "react-uuid": "^2.0.0",
     "simplebar-react": "^3.2.6",
     "styled-components": "^6.1.13"
